--- a/s4.html
+++ b/s4.html
@@ -111,7 +111,7 @@
 					<div class="row justify-content-center mb-4 pt-md-4">
 						<div class="col-md-12 heading-section ftco-animate">
 							<span class="subheading">Welcome to Jodeb</span>
-							<h2 class="mb-4">About our maintenance services</h2>
+							<h2 class="mb-4">About our Procurement and logistics support services </h2>
 							
 							<p>	In order to provide water engineering services to meet the needs of our customers, We procure goods, materials, services and construction works.
 								<br>
