--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Jodeb | water Treatment plants</title>
+	<title>Jodeb water technologieS LTD | water Treatment plants</title>
 <link rel="shortcut icon" type="image/png" href="images\ico.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
